# sloerender

./: .gitignore  LICENSE  Lady Margaret M1, Division 1, Wednesday, Cambridge May Bumps 2024 (slow motion)-render.json5  README.md  cascading_params.py  division_order.py  file_scanner.py  herif-sloerender_env.json5  ispanak-sloerender_env.json5  item_params.py  make_render_job.py  output_params.py  path_maker.py  process_wrapper.py  pyproject.toml  render.py  render_job.py  render_params.py  render_params_base.json5  rendering_job.py  sloerender.py  sloerender_env.json5  sloerender_env_sample.json5  trackers.py  yaban-sloerender_env.json5
aescripts/: Create SMR Comps.jsx
tests/: test_cascading_params.py
