[tool.poetry]
name = "sloerender"
version = "0.1.0"
description = "Rendering code for Slow Motion Rowing slowmotionrowing.com"
authors = ["Andy Southgate <andy@slowmotionrowing.com>"]
readme = "README.md"

[tool.poetry.dependencies]
clearml = "^1.16.2"
json5 = "^0.9.5"
mlflow = "^2.14.1"
psutil = "^6.0.0"
pydantic = "^2.7.4"
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
